Switched the collection choices

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -209,8 +209,8 @@
             <div class="collection-switcher switcher">
                 <button onclick="toggleCollectionDropdown()">Switch Collection</button>
                 <div id="collection-dropdown" class="dropdown-content">
-                    <a href="#" onclick="switchCollection('InitialTesting')">Initial Testing</a>
-                    <a href="#" onclick="switchCollection('CLITesting')">CLI Testing</a>
+                    <a href="#" onclick="switchCollection('CVETest')">CVETest</a>
+                    <a href="#" onclick="switchCollection('FakeReportsChunked')">FakeReportsChunked</a>
                 </div>
             </div>
             <button id="new-chat">Start New Chat</button>
