Fixed button sizes

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="collection-switcher switcher">
-                <button onclick="toggleCollectionDropdown()">Switch Collection</button>
+                <button onclick="toggleCollectionDropdown()" class="collection-switcher">Switch Collection</button>
                 <div id="collection-dropdown" class="dropdown-content">
                     <a href="#" onclick="switchCollection('CVETest')">CVETest</a>
                     <a href="#" onclick="switchCollection('FakeReportsChunked')">FakeReportsChunked</a>
