--- a/frontend/static/index.css
+++ b/frontend/static/index.css
@@ -40,6 +40,7 @@ body {
     border-radius: 5px;
     transition: background-color 0.3s ease;
     /* border: 1px solid #e7e7e7; */
+    width: 150px;
 }
 
 #chat-list div:hover, #new-chat:hover {
@@ -134,6 +135,7 @@ body {
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    width: 150px;
 }
 
 .switcher button:hover {
